k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: spring-test-application
  labels:
    app: demo
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*' # 이미지스트림을 인식 하도록 설정
    image.openshift.io/triggers: >- # 이미지 변경시 트리거(재배포)
      [{"from":{"kind":"ImageStreamTag","name":"demo:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"demo\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: demo:latest
        imagePullPolicy: IfNotPresent
        name: demo
        ports:
        - containerPort: 8080
